force-app/main/default/objects/Mobile__c/Mobile__c.object-meta.xml
<CustomObject>
    <label>Mobile</label>
    <nameField>
        <label>Mobile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>