force-app/main/default/objects/Mobile__c/fields/MRP__c.field-meta.xml
<CustomField>
    <fullName>MRP__c</fullName>
    <label>MRP</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>