force-app/main/default/objects/Mobile__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <label>Series</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Asus</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Oneplus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>