force-app/main/default/objects/Mobile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Series__c</columns>
    <columns>Description__c</columns>
    <columns>MRP__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>